<!--
  ~ Copyright (c) 2018 Jalotsav
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Shree Gurudham</string>
    <string name="imgcd_image" translatable="false">Content description of images</string>
    <string name="no_intrnt_cnctn">No internet connection available.</string>
    <string name="server_problem_sml">There are some server problem.</string>
    <string name="internal_problem_sml">There are some internal problem.</string>
    <string name="youtube_player_error_sml">Error initializing YouTube player: %s</string>
    <string name="refresh_sml">Refresh</string>

    <!--Navigation View-->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="home_sml">Home</string>
    <string name="aboutus_sml">About Us</string>
    <string name="gallery_sml">Gallery</string>
    <string name="images_sml">Images</string>
    <string name="videos_sml">Videos</string>
    <string name="audios_sml">Audios</string>
    <string name="news_sml">News</string>
    <string name="contactus_sml">Contact Us</string>

    <!--Languages-->
    <string name="languages_sml">Languages</string>
    <string name="english_sml">English</string>
    <string name="gujarati_sml">Gujarati</string>

    <!--Home-->
    <string name="home_title_msg">Welcome To Shree Shiv Shakti Gurudham Anand Ashram Dekawada</string>
    <string name="home_descrptn_msg">Page content is coming soon..!</string>

    <!--About Us-->
    <string name="aboutus_title_1">Anand Ashram</string>
    <string name="aboutus_title_2">Shree Purushottamlalji Maharaj</string>
    <string name="aboutus_title_3">Shree Kalidasji Maharaj</string>
    <string name="aboutus_title_4">Shree Shiv Partheshwar Mahapoojan</string>

    <!--News-->
    <string name="news_appear_here">News appear here</string>

    <!--Contact Us-->
    <string name="sevatrust_name_sml">Shree Purushottamlalji Maharaj Guru Seva Trust</string>
    <string name="address_line1_sml">Shree Shiv Shakti Gurudham Anand Ashram</string>
    <string name="address_line2_sml">Dakawada, Ta. Dotrod, Dist. Ahmedabad</string>
    <string name="contact_no1">+91 9879115690</string>
    <string name="contact_no2">+91 9825578121</string>
    <string name="whatsapp_no1">+91 9723300227</string>
    <string name="send_your_info_sml">Send Your Information</string>
    <string name="fullname_sml">Full name</string>
    <string name="entr_fullname_sml">Enter Full name</string>
    <string name="email_sml">Email</string>
    <string name="entr_email_sml">Enter Email</string>
    <string name="invalid_email_sml">Invalid Email</string>
    <string name="cntrycode_india">+91</string>
    <string name="mobileno_sml">Mobile No.</string>
    <string name="entr_mobileno_sml">Enter Mobile number</string>
    <string name="invalid_mobile">Invalid mobile number</string>
    <string name="descrptn_sml">Description</string>
    <string name="send_sml">Send</string>

    <!--Images-->
    <string name="images_appear_here">Images appear here</string>

    <!--Videos-->
    <string name="videos_appear_here">Videos appear here</string>

    <!--Audios-->
    <string name="audios_appear_here">Audios appear here</string>
</resources>
