<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 Jalotsav
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:orientation="vertical">

        <!--Title 1-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/_8jdp"
            app:cardCornerRadius="3dp">

            <RelativeLayout
                android:id="@+id/rltvlyot_frgmnt_aboutus_title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/imgcd_image"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/img_home_slider_default" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blackTrsprnt60" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/_16jdp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:fontFamily="@font/rubik_light"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18jdp"
                    android:text="@string/aboutus_title_1" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!--Title 2-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/_8jdp"
            app:cardCornerRadius="3dp">

            <RelativeLayout
                android:id="@+id/rltvlyot_frgmnt_aboutus_title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/imgcd_image"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/img_home_slider_default" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blackTrsprnt60" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/_16jdp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:fontFamily="@font/rubik_light"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18jdp"
                    android:text="@string/aboutus_title_2" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!--Title 3-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/_8jdp"
            app:cardCornerRadius="3dp">

            <RelativeLayout
                android:id="@+id/rltvlyot_frgmnt_aboutus_title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/imgcd_image"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/img_home_slider_default" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blackTrsprnt60" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/_16jdp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:fontFamily="@font/rubik_light"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18jdp"
                    android:text="@string/aboutus_title_3" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!--Title 4-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/_8jdp"
            app:cardCornerRadius="3dp">

            <RelativeLayout
                android:id="@+id/rltvlyot_frgmnt_aboutus_title4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/imgcd_image"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/img_home_slider_default" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blackTrsprnt60" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/_16jdp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:fontFamily="@font/rubik_light"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18jdp"
                    android:text="@string/aboutus_title_4" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>